[package]
name = "amethyst_phythyst"
version = "0.0.1"
authors = ["Andrea Catania"]
edition = "2018"
description = "The Amethyst physics engine manager"

[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.7.0" }
amethyst_error = { path = "../amethyst_error", version = "0.2.0" }
log = "0.4.6"
nalgebra = "0.18.0"